--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -56,6 +56,8 @@ jobs:
           mkdir .tmp-brand
           cd .tmp-brand
           npm install @siemens/ix-brand-theme@^1.1.0 --no-save --legacy-peer-deps
+          cd ..
+          cp -R ./node_modules/@siemens/ix-brand-theme ./packages/html-test-app/src/public/additional-theme
 
       - name: 'Build documentation for dev instance'
         uses: ./.github/workflows/actions/build
