--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "mono-repo-ix",
-  "version": "1.6.1",
+  "version": "1.6.2-beta.0",
   "license": "MIT",
   "description": "Siemens iX monorepo",
   "author": "Siemens AG",
