--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -3,7 +3,7 @@
   "homepage": "https://ix.siemens.io",
   "author": "Siemens AG",
   "license": "MIT",
-  "version": "1.6.1",
+  "version": "1.6.2-beta.0",
   "description": "Siemens iX for Vue",
   "bugs": "https://github.com/siemens/ix/issues",
   "repository": {
@@ -31,7 +31,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
-    "@siemens/ix": "~1.6.1",
+    "@siemens/ix": "~1.6.2-beta.0",
     "@siemens/ix-icons": "^1.1.0"
   },
   "devDependencies": {
