--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: []
     container:
       image: node:18.12.1
       env:
@@ -92,6 +92,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/build-cache
+      - name: Validate all commits from PR
+        run: node ./node_modules/puppeteer/install.js
       - uses: ./.github/workflows/actions/test
 
   lint:
