--- a/packages/echarts/package.json
+++ b/packages/echarts/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/siemens/ix",
     "directory": "packages/echarts"
   },
-  "version": "2.1.0",
+  "version": "2.1.1-beta.0",
   "description": "Siemens iX theme for echarts",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
